[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-harvester"
version = "2.1.0"
description = "Scrape free proxies from public sources with robust CLI functionality."
authors = [
    { name = "TheSilentPatch", email = "tahsin-kabir2000@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "colorama",
]
[project.urls]
homepage = "https://github.com/TheSilentPatch/Proxy-Harvester"
repository = "https://github.com/TheSilentPatch/Proxy-Harvester"
issues = "https://github.com/TheSilentPatch/Proxy-Harvester/issues"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet",
    "Topic :: Utilities"
]

license = "MIT"
keywords = ["proxy", "scraper", "cli", "networking"]

[project.scripts]
proxy-harvester = "proxy_harvester.main:main"
